[project]
name = "bug-free-guacamole"
version = "0.1.0"
description = "Lambda project with CDK"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib>=2.0.0",
    "constructs>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"